# utf8streams

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt  README.md  main.cpp
Example/Data/: UTF16_BE.txt  UTF16_LE.txt  UTF32_BE.txt  UTF32_LE.txt  UTF8_BOM.txt
Include/: utf8streams.hpp
Source/: utf8streams.cpp
Tests/: utf8tests.cpp
